fixed bug when persisting roles, authorities and users. closes #5 [skip ci]